@@ -18,12 +18,10 @@
  */
 package org.georchestra.gateway.app;
 
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.util.HashMap;
 import java.util.Map;
 import java.util.Optional;
-
-import javax.annotation.PostConstruct;
 
 import org.apache.commons.lang3.tuple.Pair;
 import org.georchestra.gateway.security.GeorchestraGatewaySecurityConfigProperties;
@@ -36,6 +34,8 @@ import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RequestParam;
+
+import jakarta.annotation.PostConstruct;
 
 /**
  * Controller handling login and logout views for the geOrchestra gateway.
@@ -144,7 +144,7 @@ public class LoginLogoutController {
         if (oauth2ClientConfig != null) {
             oauth2ClientConfig.getRegistration().forEach((key, value) -> {
                 String clientName = Optional.ofNullable(value.getClientName()).orElse(key);
-                String providerPath = Paths.get("login/img/", key + ".png").toString();
+                String providerPath = Path.of("login/img/", key + ".png").toString();
                 String logo = new ClassPathResource("static/" + providerPath).exists() ? providerPath
                         : "login/img/default.png";
                 oauth2LoginLinks.put("/oauth2/authorization/" + key, Pair.of(clientName, logo));
